--- a/t3gallery/package.json
+++ b/t3gallery/package.json
@@ -25,10 +25,12 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.395.0",
     "next": "^14.2.1",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
